Error on contacts

--- a/html/about.html
+++ b/html/about.html
@@ -38,7 +38,7 @@
                     <a href="./blog.html" class="header_navigation_menu_list_link">blog</a>
                 </li>
                 <li class="header_navigation_menu_list">
-                    <a href="./contact.html" class="header_navigation_menu_list_link">contact us</a>
+                    <a href="./contact.html" class="header_navigation_menu_list_link">contacts</a>
                 </li>
             </ul>
         </nav>
