--- a/html/contact.html
+++ b/html/contact.html
@@ -50,21 +50,21 @@
                     call us
                 </h6>
                 <span class="span"><i class="fas fa-phone fa-3x phone-color"></i></span>
-                <a href="tel:+254722517627" target="_blank">&plus;254722517627</a>
+                <a class="contact-link" href="tel:+254722517627" target="_blank">&plus;254722517627</a>
             </div>
             <div class="column-contacts">
                 <h6 class="col-heading">
                     email us
                 </h6>
                 <span class="span"><i class="fas fa-envelope-square fa-3x mail-color"></i></span>
-                <a href="mailto:info@virdismart.global" target="_blank">Webmaster</a>
+                <a class="contact-link" href="mailto:info@virdismart.global" target="_blank">Webmaster</a>
             </div>
             <div class="column-contacts">
                 <h6 class="col-heading">
                     message us
                 </h6>
                 <span class="span"><i class="fab fa-twitter fa-3x twitter-color"></i></span>
-                <a href="https://twitter.com/virdismart" target="_blank" rel="noopener noreferrer">Tweet Virdismart</a>
+                <a class="contact-link" href="https://twitter.com/virdismart" target="_blank" rel="noopener noreferrer">Tweet Virdismart</a>
             </div>
         </section>
     </main>
