--- a/html/product.html
+++ b/html/product.html
@@ -50,7 +50,7 @@
                 <p class="bin_content">
                     The Smart recycling Bin is capable of identifying
                      the type of waste being disposed of and rewards
-                     the user with points which they could later reddem 
+                     the user with points which they could later redeem 
                      for cash or discounts on products in participating stores
                      or other commercial entities.
                 </p>
