The final submit footer error

--- a/html/product.html
+++ b/html/product.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/product.css">
     <link rel="stylesheet" href="../css/app.css">
     <link rel="shortcut icon" href="../virdis copy.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
     <header class="header">
@@ -97,7 +98,7 @@
                         </p>
                         <form action="/" method="post" class="style-form">
                         <input type="text" name="name" id="name" placeholder="Name" class="form_input" required>
-                        <input type="text" name="email" id="email" placeholder="Email" class="form_input" required>
+                        <input type="email" name="email" id="email" placeholder="Email" class="form_input" required>
                         <button class="primary_btn">Sign Up</button>
                         </form>
                     </div>
@@ -126,17 +127,24 @@
                     </div>
                 </div>
             </div>
-            <div class="links">
-                <div class="column"><img src="../virdis copy.png" alt="Verdismart Logo" class="footer-logo">  </div>
-                <div class="column"><a href="#" class="app">App</a></div>
-                <div class="column"><a href="#" class="The-team">The Team</a></div>
-                <div class="column"><a href="#" class="careers">Careers</a></div>
-                <div class="column"><a href="#" class="address">Address</a></div>
+            <div class="container">
+                <div class="row">
+                    <div class=" col-sm-2 col-md-2 col-lg-12">
+                        <img src="../virdis copy.png" alt="Verdismart Logo" class="footer-logo">
+                        <a href="#" class="style-anchor">App</a>
+                        <a href="#" class="style-anchor">The Team</a>
+                        <a href="#" class="style-anchor">Careers</a>
+                        <a href="#" class="style-anchor">Address</a>
+                    </div>
+                </div>
             </div>
             <div class="footer_copyright">
                 <p class="copyright">Virdismart &COPY; 2020   &tilde;<span>Done by <a href="https://www.linkedin.com/in/paullaster" target="_blank" rel="noopener noreferrer">paullaster h. okoth</a></span></p>
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
