Flex header section

--- a/index.html
+++ b/index.html
@@ -15,34 +15,38 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="header_link">
-            <img src="./Virdis Web/Virdis Web/virdis copy.png" alt="" class="header_link_logo">
-        </a>
-        <nav class="header_navigation">
-            <ul class="header_navigation_menu">
-                <li class="header_navigation_menu_list">
-                    <a href="./html/about.html" class="header_navigation_menu_list_link">about us</a>
-                </li>
-                <li class="header_navigation_menu_list dropdown">
-                    <a href="#" class="header_navigation_menu_list_link dropdown_link">products
-                    </a>
-                        <ul class="products_sub_menu">
-                            <li class="products_sub_menu_list ">
-                                <a href="./html/product.html#smart_bin" class="products_sub_menu_list_link">smart bin</a>
-                            </li>
-                            <li class="products_sub_menu_list">
-                                <a href="./html/product.html#handwashing_station" class="products_sub_menu_list_link">handwashing station</a>
-                            </li>
-                        </ul>
-                </li>
-                <li class="header_navigation_menu_list">
-                    <a href="./html/blog.html" class="header_navigation_menu_list_link">blog</a>
-                </li>
-                <li class="header_navigation_menu_list">
-                    <a href="./html/contact.html" class="header_navigation_menu_list_link">contacts</a>
-                </li>
-            </ul>
-        </nav>
+        <div>
+            <a href="#" class="header_link">
+                <img src="./Virdis Web/Virdis Web/virdis copy.png" alt="" class="header_link_logo">
+            </a>
+        </div>
+        <div>
+            <nav class="header_navigation">
+                <ul class="header_navigation_menu">
+                    <li class="header_navigation_menu_list">
+                        <a href="./html/about.html" class="header_navigation_menu_list_link">about us</a>
+                    </li>
+                    <li class="header_navigation_menu_list dropdown">
+                        <a href="#" class="header_navigation_menu_list_link dropdown_link">products
+                        </a>
+                            <ul class="products_sub_menu">
+                                <li class="products_sub_menu_list ">
+                                    <a href="./html/product.html#smart_bin" class="products_sub_menu_list_link">smart bin</a>
+                                </li>
+                                <li class="products_sub_menu_list">
+                                    <a href="./html/product.html#handwashing_station" class="products_sub_menu_list_link">handwashing station</a>
+                                </li>
+                            </ul>
+                    </li>
+                    <li class="header_navigation_menu_list">
+                        <a href="./html/blog.html" class="header_navigation_menu_list_link">blog</a>
+                    </li>
+                    <li class="header_navigation_menu_list">
+                        <a href="./html/contact.html" class="header_navigation_menu_list_link">contacts</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <section class="home">
