redesigning the page

--- a/index.html
+++ b/index.html
@@ -65,34 +65,48 @@
             <div class="footer_text">
                 <h3 class="footer_text_tertiary">supported by</h3>
             </div>
-            <div class="footer_affiliates">
-                <div class="footer_affiliates_company">
+            <div class="row_company">
+                <div class="column_company">
                     <img src="./Virdis Web/Virdis Web/Ford.png" alt="Ford" class="footer_images">
                 </div>
-                <div class="footer_affiliates_company">
+                <div class="column_company">
                     <img src="./Virdis Web/Virdis Web/clinton-foundation-logo.png" alt="Clinton Foundation" class="footer_images">
                 </div>
-                <div class="footer_affiliates_company">
+                <div class="column_company">
                     <img src="./Virdis Web/Virdis Web/Enactus MMU Logo.png" alt="Enactus Multimedia" class="enactus">
                 </div>
             </div>
-            <div class="contacts">
-                <div class="contacts_column">
-                    <div class="contacts_form">
-                        <h3 class="contacts_newLetter_heading_tertiary">
-                            stay updated
-                        </h3>
-                        <p class="contacts_newsLetter_message">
-                            Sign up for our NewsLetter updates
-                        </p>
-                        <form action="/" method="post" class="style-form">
-                        <input type="text" name="name" id="name" placeholder="Name" class="form_input" required>
-                        <input type="email" name="email" id="email" placeholder="Email" class="form_input" required>
-                        <button class="primary_btn">Sign Up</button>
-                        </form>
+            <div class="row_contacts">
+                <div class="column_contacts">
+                    <div class="row_headings__contacts">
+                        <div class="column_headings_contacts">
+                            <h3 class="contacts_newLetter_heading_tertiary">
+                                stay updated
+                            </h3>
+                        </div>
+                        <div class="column_headings_contacts">
+                            <p class="contacts_newsLetter_message">
+                                Sign up for our NewsLetter updates
+                            </p>
+                        </div>
                     </div>
+                        <form action="/" method="post">
+                            <div class="row_input">
+                                <div class="culumn_form">
+                                    <div class="style_input">
+                                        <div class="style_input_column">
+                                            <input size="40em"     type="text" name="name" id="name" placeholder="Name" class="form_input" required>
+                                        </div>
+                                        <div class="style_input_column"><input size="40em"     type="email" name="email" id="email" placeholder="Email" class="form_input" required></div>
+                                    </div>
+                                </div>
+                                <div class="culumn_form">
+                                    <button     class="primary_btn">Sign Up</button>
+                                </div>
+                            </div>
+                        </form>
                 </div>
-                <div class="contacts_column">
+                <div class="column_contacts">
                     <div class="contacts_social">
                         <h3 class="contacts_social_heading_tertiary">
                             Find us on
